unit_tests/coverage.suite/lslparse-4.run
main.py -b unit_tests/builtins-coverage-4.txt -L unit_tests/fndata-coverage-4.txt -O -dcr,-processpre -
